2009-09-18  Jason Merrill  <jason@redhat.com>

	* pt.c (get_pattern_parm): New.
	(listify): Split out from...
	(listify_autos): ...here.
	(unify): Deduce std::initializer_list for T.
	* call.c (build_over_call): Warn about it.

2009-09-17  Andrew Pinski  <pinskia@gcc.gnu.org>

	PR c++/39365
	* g++.dg/expr/bool3.C: New test.
	* g++.dg/expr/bool4.C: New test.

2009-09-14  Richard Henderson  <rth@redhat.com>
            Jakub Jelinek  <jakub@redhat.com>

	* cp-tree.h (finish_asm_stmt): Update decl.
	* parser.c (cp_parser_asm_definition): Parse asm goto.
	(cp_parser_asm_label_list): New.
	* pt.c (tsubst_copy_asm_operands): Don't recurse on labels.
	(tsubst_expr): Handle asm labels.
	* semantics.c (finish_asm_stmt): Add and use labels parameter.

2009-09-14  Richard Henderson  <rth@redhat.com>

	* except.c (init_exception_processing): Don't call
	default_init_unwind_resume_libfunc.
	(cp_protect_cleanup_actions): Return the decl to call.
	(build_exc_ptr): Use __builtin_eh_pointer.
	* optimize.c (clone_body): Set eh_lp_nr, not eh_region.

2009-09-13  Richard Guenther  <rguenther@suse.de>
	Rafael Avila de Espindola  <espindola@google.com>

	* except.c (init_exception_processing): Do not set
	lang_eh_runtime_type.
	(choose_personality_routine): Do not set eh_personality_decl,
	set pragma_java_exceptions.
	* cp-lang.c (LANG_HOOKS_EH_RUNTIME_TYPE): Define.
	(LANG_HOOKS_EH_PERSONALITY): Likewise.
	(cp_eh_personality_decl): New.
	(cp_eh_personality): Likewise.
	* Make-lang.in (cp-lang.o): Add $(EXPR_H) and $(EXCEPT_H)
	dependencies.

2009-09-13  Wei Guozhi  <carrot@google.com>

	PR c++/3187
	* cp/optimize.c (build_delete_destructor_body): New function.
	(maybe_clone_body): Call build_delete_destructor_body for
	deleting destructor.

2009-09-10  Jason Merrill  <jason@redhat.com>

	* repo.c (extract_string, get_base_filename, init_repo): constify.

2009-09-09  Jason Merrill  <jason@redhat.com>

	* error.c (find_typenames_r): Also add decltypes.
